moderacao para o android
Signed-off-by: Win_Score <ws25jan19@gmail.com>

--- a/css/style.css
+++ b/css/style.css
@@ -416,18 +416,31 @@ main .conteiner{
 
     .resulCurso .division-numbers p{
         margin-top: 17px;
+    }
 
+    .boxForm form input,.boxForm form select{
+        width: 95%;
+    }
 
-
-
+    .logo a{
+        display: none;
     }
 
     main .conteiner .main-text h1{
         font-size: 3rem;
     }
 
+    main{
+        margin: none;
+        padding: none;
+        justify-content: none;
+    }
+
     
 
+    .main-img{
+        width: 100%;
+    }
     .difeCursos .curso img{
         width: 70%;
     }
