--- a/css/style.css
+++ b/css/style.css
@@ -120,7 +120,7 @@ main .conteiner{
 }
 
 .main-text h1{
-    font-size: 4.5rem;
+    font-size: 40px
 }
 
 .main-text div{
@@ -138,6 +138,7 @@ main .conteiner{
 
 .main-img{
     width: 50%;
+    
 
 }
 
@@ -214,12 +215,13 @@ section button{
 .boxForm{
     width: 100%;
     background-color: #14424b66;
-    height: 300px;
+    height: 400px;
     align-items: center;
     justify-content: center;
     border-radius: 15px;
     margin-bottom: 20px;
     text-align: center;
+    color: orange;
 
 }
 
